--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'Arial', sans-serif; /* Use a clean font */
+    font-family: 'Arial', sans-serif;
 }
 
 input[type="number"] {
